--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,7 @@ jobs:
           host: ${{ secrets.HOST }}
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
-          port: 3000
+          port: ${{ secrets.PORT }}
           timeout: 40s # 30초 기본
           script: |
             echo "테스트 출력"
