--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,4 +19,5 @@ jobs:
           port: ${{ secrets.PORT }}
           timeout: 40s # 30초 기본
           script: |
-            echo "테스트 출력"
+            cd /ubuntu/blog
+            sh script.sh
