Feature: [#5] 블로그 이전 게시글 이전 ~22.08.11

--- a/package.json
+++ b/package.json
@@ -51,7 +51,7 @@
     "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "deploy": "gatsby clean && gatsby build && gh-pages -d public",
-    "start": "gatsby develop -p 3500",
+    "start": "gatsby clean && gatsby develop -p 3500",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
