--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "gatsby": "^4.9.3",
     "gatsby-cli": "^4.24.0",
     "gatsby-plugin-advanced-sitemap": "^2.0.0",
+    "gatsby-plugin-cname": "^1.0.0",
     "gatsby-plugin-google-analytics": "^4.9.0",
     "gatsby-plugin-image": "^2.9.1",
     "gatsby-plugin-manifest": "^4.9.1",
