--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "gatsby-cli": "^4.24.0",
     "gatsby-plugin-advanced-sitemap": "^2.0.0",
     "gatsby-plugin-cname": "^1.0.0",
+    "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-image": "^2.9.1",
     "gatsby-plugin-manifest": "^4.9.1",
