--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "dependencies": {
     "@mui/icons-material": "^5.1.0",
     "@mui/material": "^5.1.0",
+    "firebase": "^10.12.2",
     "gatsby": "^4.9.3",
     "gatsby-cli": "^4.24.0",
     "gatsby-plugin-advanced-sitemap": "^2.0.0",
     "gatsby-plugin-cname": "^1.0.0",
+    "gatsby-plugin-firebase": "^0.2.0-beta.4",
     "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-gtag": "^1.0.13",
     "gatsby-plugin-image": "^2.9.1",
