--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "gatsby-cli": "^4.24.0",
     "gatsby-plugin-advanced-sitemap": "^2.0.0",
     "gatsby-plugin-cname": "^1.0.0",
+    "gatsby-plugin-feed": "^4.25.0",
     "gatsby-plugin-firebase-v9.0": "^1.0.3",
     "gatsby-plugin-google-adsense": "^1.1.3",
     "gatsby-plugin-gtag": "^1.0.13",
