chore: 라이브러리 업데이트

--- a/package.json
+++ b/package.json
@@ -8,9 +8,8 @@
     "@headlessui/react": "^2.2.7",
     "@kfonts/nanum-gothic": "^0.2.0",
     "autoprefixer": "^10.4.19",
-    "babel-plugin-lodash": "^3.3.4",
-    "baseline-browser-mapping": "^2.9.4",
     "caniuse-lite": "^1.0.30001759",
+    "dotenv": "^17.2.3",
     "gatsby": "^5.13.5",
     "gatsby-plugin-feed": "^5.13.1",
     "gatsby-plugin-firebase-v9.0": "^1.0.3",
@@ -22,14 +21,11 @@
     "gatsby-plugin-postcss": "^6.13.1",
     "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sharp": "^5.13.1",
-    "gatsby-plugin-sitemap": "^6.13.1",
     "gatsby-remark-autolink-headers": "^6.13.1",
     "gatsby-remark-copy-linked-files": "^6.13.1",
     "gatsby-remark-images": "^7.13.1",
     "gatsby-remark-prismjs": "^7.13.1",
-    "gatsby-remark-responsive-iframe": "^6.13.1",
     "gatsby-remark-smartypants": "^6.13.1",
-    "gatsby-remark-table-of-contents": "^2.0.0",
     "gatsby-source-filesystem": "^5.13.1",
     "gatsby-transformer-remark": "^6.13.1",
     "gatsby-transformer-sharp": "^5.13.1",
@@ -40,8 +36,7 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-rotating-text": "^1.4.1",
-    "tailwindcss": "^3.4.3",
-    "typeface-montserrat": "^1.1.13"
+    "tailwindcss": "^3.4.3"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.16",
