chore(deps): pnpm 전환 및 의존성 업데이트

--- a/package.json
+++ b/package.json
@@ -5,43 +5,44 @@
   "version": "1.0.0",
   "author": "jh8459 <kk_ong2233@naver.com>",
   "dependencies": {
-    "@headlessui/react": "^2.2.7",
+    "@headlessui/react": "^2.2.9",
     "@kfonts/nanum-gothic": "^0.2.0",
-    "autoprefixer": "^10.4.19",
-    "caniuse-lite": "^1.0.30001759",
-    "dotenv": "^17.2.3",
-    "gatsby": "^5.13.5",
-    "gatsby-plugin-feed": "^5.13.1",
+    "@tailwindcss/postcss": "^4.1.18",
+    "autoprefixer": "^10.4.24",
+    "caniuse-lite": "^1.0.30001769",
+    "dotenv": "^17.2.4",
+    "gatsby": "^5.16.0",
+    "gatsby-plugin-feed": "^5.16.0",
     "gatsby-plugin-firebase-v9.0": "^1.0.3",
     "gatsby-plugin-gtag": "^1.0.13",
-    "gatsby-plugin-image": "^3.13.1",
-    "gatsby-plugin-manifest": "^5.13.1",
-    "gatsby-plugin-postcss": "^6.13.1",
+    "gatsby-plugin-image": "^3.16.0",
+    "gatsby-plugin-manifest": "^5.16.0",
+    "gatsby-plugin-postcss": "^6.16.0",
     "gatsby-plugin-robots-txt": "^1.8.0",
-    "gatsby-plugin-sharp": "^5.13.1",
-    "gatsby-remark-autolink-headers": "^6.13.1",
-    "gatsby-remark-copy-linked-files": "^6.13.1",
-    "gatsby-remark-images": "^7.13.1",
-    "gatsby-remark-prismjs": "^7.13.1",
-    "gatsby-remark-smartypants": "^6.13.1",
-    "gatsby-source-filesystem": "^5.13.1",
-    "gatsby-transformer-remark": "^6.13.1",
-    "gatsby-transformer-sharp": "^5.13.1",
-    "postcss": "^8.4.38",
-    "prismjs": "^1.29.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "gatsby-plugin-sharp": "^5.16.0",
+    "gatsby-remark-autolink-headers": "^6.16.0",
+    "gatsby-remark-copy-linked-files": "^6.16.0",
+    "gatsby-remark-images": "^7.16.0",
+    "gatsby-remark-prismjs": "^7.16.0",
+    "gatsby-remark-smartypants": "^6.16.0",
+    "gatsby-source-filesystem": "^5.16.0",
+    "gatsby-transformer-remark": "^6.16.0",
+    "gatsby-transformer-sharp": "^5.16.0",
+    "postcss": "^8.5.6",
+    "prismjs": "^1.30.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^5.5.0",
     "react-rotating-text": "^1.4.1",
-    "tailwindcss": "^3.4.3"
+    "tailwindcss": "^4.1.18"
   },
   "devDependencies": {
-    "@tailwindcss/typography": "^0.5.16",
-    "firebase": "^10.12.2",
-    "gatsby-cli": "^5.13.2",
+    "@tailwindcss/typography": "^0.5.19",
+    "firebase": "^12.9.0",
+    "gatsby-cli": "^5.16.0",
     "gh-pages": "^6.1.1",
-    "prettier": "^3.2.5"
+    "prettier": "^3.8.1"
   },
   "keywords": [
     "gatsby",
@@ -50,8 +51,8 @@
   ],
   "license": "0BSD",
   "scripts": {
-    "build": "gatsby clean && NODE_OPTIONS=--max-old-space-size=8192 gatsby build",
-    "develop": "CHOKIDAR_USEPOLLING=true NODE_OPTIONS=--max-old-space-size=8192 gatsby develop",
+    "build": "gatsby clean && gatsby build",
+    "develop": "gatsby develop",
     "deploy": "npm run build && cp CNAME public/CNAME && gh-pages -d public -x",
     "start": "gatsby clean && npm run develop -- -p 3500 -H 0.0.0.0",
     "serve": "gatsby serve",
