--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "version": "1.0.0",
   "author": "jh8459 <kk_ong2233@naver.com>",
   "dependencies": {
+    "@gatsbyjs/reach-router": "^2.0.1",
     "@headlessui/react": "^2.2.9",
     "@kfonts/nanum-gothic": "^0.2.0",
     "@tailwindcss/postcss": "^4.1.18",
@@ -53,8 +54,8 @@
   "scripts": {
     "build": "gatsby clean && gatsby build",
     "develop": "gatsby develop",
-    "deploy": "npm run build && cp CNAME public/CNAME && gh-pages -d public -x",
-    "start": "gatsby clean && npm run develop -- -p 3500 -H 0.0.0.0",
+    "deploy": "pnpm run build && cp CNAME public/CNAME && gh-pages -d public -x",
+    "start": "gatsby clean && pnpm run develop -- -p 3500 -H 0.0.0.0",
     "serve": "gatsby serve",
     "clean": "gatsby clean"
   },
