--- a/package.json
+++ b/package.json
@@ -40,10 +40,16 @@
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.19",
+    "@types/gatsbyjs__reach-router": "^2.0.5",
+    "@types/node": "^22.10.2",
+    "@types/react": "^18.3.12",
+    "@types/react-dom": "^18.3.1",
+    "@types/react-helmet": "^6.1.11",
     "firebase": "^12.9.0",
     "gatsby-cli": "^5.16.0",
     "gh-pages": "^6.1.1",
-    "prettier": "^3.8.1"
+    "prettier": "^3.8.1",
+    "typescript": "^5.7.2"
   },
   "keywords": [
     "gatsby",
