chore: ESLint 설정 추가

--- a/package.json
+++ b/package.json
@@ -45,6 +45,11 @@
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.1",
     "@types/react-helmet": "^6.1.11",
+    "@typescript-eslint/eslint-plugin": "^5.62.0",
+    "@typescript-eslint/parser": "^5.62.0",
+    "eslint": "^7.32.0",
+    "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "firebase": "^12.9.0",
     "gatsby-cli": "^5.16.0",
     "gh-pages": "^6.1.1",
@@ -59,6 +64,7 @@
   "license": "0BSD",
   "scripts": {
     "build": "gatsby clean && gatsby build",
+    "lint": "eslint . --max-warnings=0",
     "develop": "gatsby develop",
     "deploy": "pnpm run build && cp CNAME public/CNAME && gh-pages -d public -x",
     "start": "gatsby clean && pnpm run develop -- -p 3500 -H 0.0.0.0",
